add notes on system info

--- a/MatrixMultiply.ipynb
+++ b/MatrixMultiply.ipynb
@@ -110,13 +110,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Notes on comparison:\n",
+    "\n",
+    "- CPU: i7 6950X (10 cores, 3.5 GHz)\n",
+    "- GPU: GTX 1080 Ti (3584 CUDA cores, 1.6 GHz)\n",
+    "\n",
+    "Note that $4096*4096*\\frac{32}{8}$ bytes is 67 MB, which is well under the 1080 Ti's 11 GB memory \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
